--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Mazars</h3>
 
-                    <div><ul><li>Pentest interno e externo</li><li>Pentest em aplicações Web</li><li>Implementação de políticas de segurança seguindo diretrizes do CMN, Bacen, CVM, NIST e ISO 27K</li><li>Monitoramento, auditoria e avaliação de maturidade dos processos de segurança da informação</li><li>Análise e mitigação de riscos e vulnerabilidades em sistemas, aplicações, processos e infraestruturas de segurança cibernética</li><li>implementação e operação do SOC com o SentinelOne.</li></ul></div>
+                    <div><ul><li>Pentest interno e externo;</li><li>Pentest em aplicações Web;</li><li>Implementação de políticas de segurança seguindo diretrizes do CMN, Bacen, CVM, NIST e ISO 27K;</li><li>Monitoramento, auditoria e avaliação de maturidade dos processos de segurança da informação;</li><li>Análise e mitigação de riscos e vulnerabilidades em sistemas, aplicações, processos e infraestruturas de segurança cibernética;</li><li>implementação e operação do SOC com o SentinelOne.</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Pentest</span>
@@ -108,7 +108,7 @@
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Pentester Autônomo</h3>
 
-                    <div><ul><li>Pentest Externo</li><li>Pentest Interno</li><li>Pentest Web</li><li>Análise de segurança</li></ul></div>
+                    <div><ul><li>Pentest Externo;</li><li>Pentest Interno;</li><li>Pentest Web;</li><li>Análise de segurança.</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Pentest </span>
@@ -123,9 +123,7 @@
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">EGS Brasil</h3>
 
-                    <div><p>Confecção de processamento de dados com python e elaboração de relatórios técnicos para cliente, criando meios de automatização com a linguagem na elaboração dos documentos;   -- Bibliotecas utilizadas Numpy, Pandas, Matplotlib, Cartopy, Seaborn, gsw, pylab e pycircstat; 
-Manutenção, testes e criação de procedimentos de equipamentos eletrônicos voltados para área da oceanografia;
-Aquisição de dados com moto aquática, levantamentos de dados e instalação de marégrafos.</p></div>
+                    <div><ul><li>Confecção de processamento de dados com python e elaboração de relatórios técnicos para cliente, criando meios de automatização com a linguagem na elaboração dos documentos;   -- Bibliotecas utilizadas Numpy, Pandas, Matplotlib, Cartopy, Seaborn, gsw, pylab e pycircstat; </li><li>Manutenção, testes e criação de procedimentos de equipamentos eletrônicos voltados para área da oceanografia;</li><li>Aquisição de dados com moto aquática, levantamentos de dados e instalação de marégrafos.</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Data Analysis</span>
@@ -141,7 +139,7 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Ecoceano - Empresa Júnior de Consultoria em Oceanografia e Educação Ambiental</h3>
 
-                    <div><p>Gerenciar fluxo de caixa, confecção de relatórios informativos, realização de planejamento estratégico e gerir assessores na distribuição de demandas.</p></div>
+                    <div><ul><li>Gerenciar fluxo de caixa, confecção de relatórios informativos, realização de planejamento estratégico e gerir assessores na distribuição de demandas.</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Educação Ambiental</span>
@@ -197,15 +195,12 @@ Aquisição de dados com moto aquática, levantamentos de dados e instalação d
             <h2 class="mb-4">Experiência Voluntária</h2>
             <div class="row d-block d-md-flex mb-5">
                 <div class="col-md-2 pt-1">
-                    Abril de 2022 – Junho de 2022
+                    Abril de 2022 – Outubro de 2022
                 </div>
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Enygma</h3>
 
-                    <div><p>Fortinet:
-Análise de Log’s;
-Identificação de risco;
-Análise de relatórios de vulnerabilidade.</p></div>
+                    <div><ul><li>Fortinet:</li><li>Análise de Log’s;</li><li>Identificação de risco;</li><li>Análise de relatórios de vulnerabilidade.</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">SOC</span>
@@ -220,7 +215,7 @@ Análise de relatórios de vulnerabilidade.</p></div>
                 <div class="col-md-10">
                     <h3 class="fs-4 fw-normal">Na Onda do Futuro</h3>
 
-                    <div><p>Criação de dinâmicas de aula focadas em eduação ambiental para criaças</p></div>
+                    <div><ul><li>Criação de dinâmicas de aula focadas em eduação ambiental para criaças</li></ul></div>
 
                     <p>
                         <span class="badge text-body border border-1">Educação Ambiental</span>
@@ -235,7 +230,23 @@ Análise de relatórios de vulnerabilidade.</p></div>
             <h3 class="h2 screen mb-4">Skills</h3>
             <div class="row align-items-center">
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Hacking</small>
+                    <small>Pentest Web</small>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1">
+                    <div class="skills">
+                        <div class="skills-bar" style="width: 100%"></div>
+                    </div>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
+                    <small>Pentest Externo</small>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1">
+                    <div class="skills">
+                        <div class="skills-bar" style="width: 100%"></div>
+                    </div>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
+                    <small>Pentest Interno</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
@@ -251,11 +262,19 @@ Análise de relatórios de vulnerabilidade.</p></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Pentest</small>
+                    <small>Análise vulnerabilidade</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
                         <div class="skills-bar" style="width: 100%"></div>
+                    </div>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
+                    <small>Python</small>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1">
+                    <div class="skills">
+                        <div class="skills-bar" style="width: 90%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
@@ -275,7 +294,7 @@ Análise de relatórios de vulnerabilidade.</p></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>COBIT</small>
+                    <small>SOC</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
@@ -287,11 +306,11 @@ Análise de relatórios de vulnerabilidade.</p></div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 80%"></div>
+                        <div class="skills-bar" style="width: 75%"></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>GitHub</small>
+                    <small>AWS</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
@@ -299,15 +318,7 @@ Análise de relatórios de vulnerabilidade.</p></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>OpenIA</small>
-                </div>
-                <div class="col-print-1 col-3 col-md-2 col-lg-1">
-                    <div class="skills">
-                        <div class="skills-bar" style="width: 80%"></div>
-                    </div>
-                </div>
-                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Cloud</small>
+                    <small>Automação de processos</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
@@ -315,19 +326,11 @@ Análise de relatórios de vulnerabilidade.</p></div>
                     </div>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Python</small>
+                    <small>Criação de Dashboards</small>
                 </div>
                 <div class="col-print-1 col-3 col-md-2 col-lg-1">
                     <div class="skills">
-                        <div class="skills-bar" style="width: 80%"></div>
-                    </div>
-                </div>
-                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>Análise vulnerabilidade</small>
-                </div>
-                <div class="col-print-1 col-3 col-md-2 col-lg-1">
-                    <div class="skills">
-                        <div class="skills-bar" style="width: 100%"></div>
+                        <div class="skills-bar" style="width: 75%"></div>
                     </div>
                 </div>
             </div>
@@ -336,7 +339,7 @@ Análise de relatórios de vulnerabilidade.</p></div>
         <h2 class="mb-4">Experiência Adicional</h2>
 
         <div class="mb-4">
-            <h3 class="fs-4 fw-normal">Pentest</h3>
+            <h3 class="fs-4 fw-normal">Pentester</h3>
 
             <pre><code>  Pentest interno e externo; Web application pentest; Análise de vulnerabilidade.
   </code></pre>
@@ -358,6 +361,22 @@ Análise de relatórios de vulnerabilidade.</p></div>
                 <span class="badge text-body border border-1">AWS</span>
                 <span class="badge text-body border border-1">Azure</span>
                 <span class="badge text-body border border-1">Customização de scripts em Bash, PHP, SQL, Python, C, Perl, Ruby, PowerShell</span>
+            </div>
+                          
+        </div>
+        <div class="mb-4">
+            <h3 class="fs-4 fw-normal">Analista Blue Team</h3>
+
+            <pre><code>  Implementação de centro de operações; Análise de Log&#39;s; identificação de risco e report para cliente para mitigação; Elaboração de relatório de vulnerabilidade.
+  </code></pre>
+
+            <div>
+                <span class="badge text-body border border-1">Fortinet</span>
+                <span class="badge text-body border border-1">SOC</span>
+                <span class="badge text-body border border-1">SIEM</span>
+                <span class="badge text-body border border-1">IBM Qradar</span>
+                <span class="badge text-body border border-1">Zabbix</span>
+                <span class="badge text-body border border-1">Sentinel One</span>
             </div>
                           
         </div>
